add email verification classes and methods